--- a/back end/getmydrivercardbackend/build.gradle
+++ b/back end/getmydrivercardbackend/build.gradle
@@ -27,4 +27,7 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+	compile('mysql:mysql-connector-java')
+	compileOnly('org.projectlombok:lombok:1.18.2')
 }
