--- a/back end/getmydrivercardbackend/src/main/resources/application.properties
+++ b/back end/getmydrivercardbackend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jbdc:mysql://loclhost:3306/getmydrivercard?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/getmydrivercard?useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=geniuspassword69
 
