--- a/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".GetMyDriverCardApplication"
         android:allowBackup="true"
@@ -18,6 +20,7 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
         <activity
             android:name=".views.login.LoginActivity"
             android:windowSoftInputMode="stateHidden|adjustResize">
@@ -27,6 +30,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".views.camera.CameraActivity"
+            android:configChanges="orientation|screenLayout|keyboardHidden"
+            android:hardwareAccelerated="true"
+            android:screenOrientation="portrait" />
+        <activity android:name=".views.camera.PicturePreviewActivity" />
+        <activity android:name=".views.signature.SignatureActivity"></activity>
     </application>
 
 </manifest>
