--- a/back end/getmydrivercardbackend/build.gradle
+++ b/back end/getmydrivercardbackend/build.gradle
@@ -30,4 +30,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok:1.18.2')
+	compile group: 'org.hibernate', name: 'hibernate-gradle-plugin', version: '5.3.2.Final'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
+
+
 }
