--- a/front end/GetMyDriverCardApp/app/build.gradle
+++ b/front end/GetMyDriverCardApp/app/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 
     implementation 'com.karumi:dexter:5.0.0'
 
+    implementation('de.keyboardsurfer.android.widget:crouton:1.8.5@aar') {
+        exclude group: 'com.google.android', module: 'support-v4'
+    }
+
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
