--- a/back end/getmydrivercardbackend/build.gradle
+++ b/back end/getmydrivercardbackend/build.gradle
@@ -27,7 +27,15 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	
 	compile('org.hibernate:hibernate-core:5.3.6.Final')
 	compile('mysql:mysql-connector-java')
+
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	compile group: 'org.springframework.security', name: 'spring-security-core', version: '5.1.1.RELEASE'
+	compile group: 'org.springframework.security', name: 'spring-security-web', version: '5.1.1.RELEASE'
+	compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.1.RELEASE'
+	
 	compileOnly('org.projectlombok:lombok:1.18.2')
 }
