refactored home activity

--- a/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
 
         <activity android:name=".views.signature.SignatureActivity" />
 
+        <activity android:name=".views.home.HomeActivity" />
     </application>
 
 </manifest>
