--- a/front end/GetMyDriverCardApp/app/build.gradle
+++ b/front end/GetMyDriverCardApp/app/build.gradle
@@ -46,8 +46,6 @@ dependencies {
 
     implementation 'codelight.studios:android-smart-login:1.2'
 
-    implementation 'com.otaliastudios:cameraview:1.6.0'
-
     implementation 'com.kyanogen.signatureview:signature-view:1.2'
 
     implementation 'com.karumi:dexter:5.0.0'
@@ -60,9 +58,18 @@ dependencies {
         exclude group: 'com.google.android', module: 'support-v4'
     }
 
+    implementation group: 'org.apache.httpcomponents',
+            name: 'httpclient-android',
+            version: '4.3.5.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    implementation 'id.zelory:compressor:2.1.0'
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
@@ -75,4 +82,7 @@ dependencies {
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support:exifinterface:28.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
