--- a/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
     package="com.rachev.getmydrivercardapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:name=".GetMyDriverCardApplication"
@@ -17,6 +19,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <service
+            android:name=".services.notifications.MyFirebaseMessagingService"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".services.notifications.MyFirebaseInstanceIDService"
+            android:permission="android:permission=com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".services.notifications.LikeService" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -26,21 +45,24 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".views.camera.CameraActivity"
-            android:configChanges="orientation|screenLayout|keyboardHidden"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="portrait" />
+            android:name=".views.photos.SelfiePickingActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".views.photos.EnclosedAttachmentsPickingActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".views.signature.SignatureActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity
+            android:name=".views.home.HomeActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
+        <activity android:name=".views.StartActivity" />
 
-        <activity android:name=".views.camera.PicturePreviewActivity" />
-
-        <activity android:name=".views.signature.SignatureActivity" />
-
-        <activity android:name=".views.home.HomeActivity" />
     </application>
 
 </manifest>
