--- a/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/AndroidManifest.xml
@@ -49,7 +49,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+
+        <activity android:name=".views.cardRequest.CardRequestActivity" />
+        <activity android:name=".views.cardRequest.FirstCardActivity" />
+        <activity android:name=".views.cardRequest.ExchangeCard" />
+        <activity android:name=".views.cardRequest.CardReplacement"></activity>
             android:name=".views.photos.SelfiePickingActivity"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
